--- a/BL/BL.csproj
+++ b/BL/BL.csproj
@@ -54,6 +54,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ExamGenerator.cs" />
     <Compile Include="DocumentGenerator.cs" />
     <Compile Include="QuestionParser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
