--- a/BL/packages.config
+++ b/BL/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="ClosedXML" version="0.80.1" targetFramework="net461" />
   <package id="DocumentFormat.OpenXml" version="2.5" targetFramework="net461" />
   <package id="OpenXMLSDK-MOT" version="2.6.0.0" targetFramework="net461" />
   <package id="System.Management.Automation" version="6.1.7601.17515" targetFramework="net461" />
