Add Asnswer's Tests

--- a/Entities.Test/Entities.Test.csproj
+++ b/Entities.Test/Entities.Test.csproj
@@ -38,6 +38,7 @@
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AnswerTests.cs" />
     <Compile Include="QuestionTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
