--- a/Entities.Test/Entities.Test.csproj
+++ b/Entities.Test/Entities.Test.csproj
@@ -39,6 +39,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AnswerTests.cs" />
+    <Compile Include="CourseTests.cs" />
     <Compile Include="ExamTests.cs" />
     <Compile Include="QuestionTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
