--- a/src/QuizH/project.json
+++ b/src/QuizH/project.json
@@ -27,7 +27,16 @@
   },
 
   "frameworks": {
-    "net452": { }
+    "net461": {
+      "dependencies": {
+        "DAL": {
+          "target": "project"
+        },
+        "Entities": {
+          "target": "project"
+        }
+      }
+    }
   },
 
   "buildOptions": {
