--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -43,6 +43,9 @@
   <ItemGroup>
     <Compile Include="CourseRepository.cs" />
     <Compile Include="ExamRepository.cs" />
+    <Compile Include="ICourseRepository.cs" />
+    <Compile Include="IExamRepository.cs" />
+    <Compile Include="IQuestionRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QuestionRepository.cs" />
   </ItemGroup>
