--- a/src/QuizH/project.json
+++ b/src/QuizH/project.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
+    "MediatR": "2.1.0",
+    "MediatR.Extensions.Microsoft.DependencyInjection": "1.0.1",
     "Microsoft.ApplicationInsights.AspNetCore": "1.0.0",
     "Microsoft.AspNetCore.Diagnostics": "1.0.0",
     "Microsoft.AspNetCore.Mvc": "1.0.1",
