--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -42,9 +42,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CourseRepository.cs" />
+    <Compile Include="ProfessorRepository.cs" />
     <Compile Include="ExamRepository.cs" />
     <Compile Include="ICourseRepository.cs" />
     <Compile Include="IExamRepository.cs" />
+    <Compile Include="IProfessorRepository.cs" />
     <Compile Include="IQuestionRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QuestionRepository.cs" />
