--- a/src/QuizH/project.json
+++ b/src/QuizH/project.json
@@ -27,6 +27,8 @@
         "Microsoft.Extensions.Logging.Console": "1.0.0",
         "Microsoft.Extensions.Logging.Debug": "1.0.0",
         "Microsoft.Extensions.Options.ConfigurationExtensions": "1.0.0",
+        "Microsoft.TypeScript.Compiler": "2.1.4",
+        "Microsoft.TypeScript.MSBuild": "2.1.4",
         "Microsoft.VisualStudio.Web.BrowserLink.Loader": "14.0.0"
     },
 
