--- a/src/QuizH/scripts/tsconfig.json
+++ b/src/QuizH/scripts/tsconfig.json
@@ -3,7 +3,8 @@
         "noImplicitAny": true,
         "noEmitOnError": true,
         "sourceMap": true,
-        "target": "es5"
+        "target": "es5",
+        "typeRoots": [ "./typings" ]
     },
     "files": [
         "./Exam.ts"
