--- a/src/QuizH/package.json
+++ b/src/QuizH/package.json
@@ -1,9 +1,12 @@
 {
-	"version": "1.0.0",
-	"name": "asp.net",
-	"private": true,
-    "devDependencies": {
-        "gulp": "3.9.0",
-        "del": "2.2.0"
-    }
+  "version": "1.0.0",
+  "name": "asp.net",
+  "private": true,
+  "dependencies": {
+    "requirejs": "^2.3.2"
+  },
+  "devDependencies": {
+    "gulp": "3.9.0",
+    "del": "2.2.0"
+  }
 }
