--- a/src/QuizH/scripts/tsconfig.json
+++ b/src/QuizH/scripts/tsconfig.json
@@ -4,10 +4,13 @@
         "noEmitOnError": true,
         "sourceMap": true,
         "target": "es5",
+        "module": "amd",
         "typeRoots": [ "./typings" ]
     },
     "files": [
+        "./require-config.ts",
         "./Exam.ts"
+
     ],
     "compileOnSave": true
 }
