--- a/src/QuizH/package.json
+++ b/src/QuizH/package.json
@@ -3,6 +3,8 @@
   "name": "asp.net",
   "private": true,
   "dependencies": {
+    "@types/jquery": "^2.0.39",
+    "@types/knockout": "^3.4.39",
     "requirejs": "^2.3.2"
   },
   "devDependencies": {
