--- a/src/QuizH/project.json
+++ b/src/QuizH/project.json
@@ -1,18 +1,18 @@
 {
   "userSecretsId": "aspnet-quizh-053ff11b-fd32-4c63-b35d-651f334ae285",
     "dependencies": {
-        "ClosedXML": "0.85.0",
-        "MediatR": "2.1.0",
-        "MediatR.Extensions.Microsoft.DependencyInjection": "1.0.1",
-        "Microsoft.ApplicationInsights.AspNetCore": "1.0.0",
-        "Microsoft.AspNetCore.Diagnostics": "1.0.0",
-        "Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore": "1.0.0",
-        "Microsoft.AspNetCore.Identity.EntityFrameworkCore": "1.0.0",
-        "Microsoft.AspNetCore.Mvc": "1.0.1",
-        "Microsoft.AspNetCore.Razor.Tools": {
-            "version": "1.0.0-preview2-final",
-            "type": "build"
-        },
+      "ClosedXML": "0.86.0",
+      "MediatR": "2.1.0",
+      "MediatR.Extensions.Microsoft.DependencyInjection": "1.0.1",
+      "Microsoft.ApplicationInsights.AspNetCore": "1.0.0",
+      "Microsoft.AspNetCore.Diagnostics": "1.0.0",
+      "Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore": "1.0.0",
+      "Microsoft.AspNetCore.Identity.EntityFrameworkCore": "1.0.0",
+      "Microsoft.AspNetCore.Mvc": "1.0.1",
+      "Microsoft.AspNetCore.Razor.Tools": {
+        "version": "1.0.0-preview2-final",
+        "type": "build"
+      },
         "Microsoft.AspNetCore.Routing": "1.0.1",
         "Microsoft.AspNetCore.Server.IISIntegration": "1.0.0",
         "Microsoft.AspNetCore.Server.Kestrel": "1.0.1",
@@ -31,6 +31,7 @@
         "Microsoft.TypeScript.Compiler": "2.1.4",
         "Microsoft.TypeScript.MSBuild": "2.1.4",
         "Microsoft.VisualStudio.Web.BrowserLink.Loader": "14.0.0",
+      "System.IO.FileSystem": "4.3.0",
         "System.Management.Automation": "6.1.7601.17515",
         "System.Management.Automation.dll": "10.0.10586"
     },
@@ -50,12 +51,12 @@
             "BL.Interfaces": {
                 "target": "project"
             },
-            "DAL": {
-                "target": "project"
-            },
-            "Entities": {
-                "target": "project"
-            }
+          "DAL": {
+            "target": "project"
+          },
+          "Entities": {
+            "target": "project"
+          }
         }
     }
   },
