--- a/src/QuizH/project.fragment.lock.json
+++ b/src/QuizH/project.fragment.lock.json
@@ -25,8 +25,10 @@
         "bin/Debug/BL.dll": {}
       },
       "runtime": {
-        "../../packages/ClosedXML.0.85.0/lib/net40/ClosedXML.dll": {},
-        "../../packages/OpenXMLSDK-MOT.2.6.1.0/lib/DocumentFormat.OpenXml.dll": {},
+        "../../packages/ClosedXML.0.86.0/lib/net40/ClosedXML.dll": {},
+        "../../packages/DocumentFormat.OpenXml.2.5/lib/DocumentFormat.OpenXml.dll": {},
+        "../../packages/System.IO.FileSystem.4.3.0/lib/net46/System.IO.FileSystem.dll": {},
+        "../../packages/System.IO.FileSystem.Primitives.4.3.0/lib/net46/System.IO.FileSystem.Primitives.dll": {},
         "../../packages/System.Management.Automation.6.1.7601.17515/lib/net45/System.Management.Automation.dll": {},
         "bin/Debug/BL.dll": {}
       },
