--- a/src/QuizH/appsettings.json
+++ b/src/QuizH/appsettings.json
@@ -10,7 +10,8 @@
       "Microsoft": "Information"
     }
   },
-  "ConnectionStrings": {
-    "MyConnection": "Data Source=quizh.db"
-  }
+    "ConnectionStrings": {
+        "MyConnection": "Data Source=D-POZZOBON;Initial Catalog=Scuola;Integrated Security=True;Connect Timeout=15;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
+        "EntitiesDb": "Data Source=D-POZZOBON;Initial Catalog=Scuola;Integrated Security=True;Connect Timeout=15;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    }
 }
