--- a/src/BL/packages.config
+++ b/src/BL/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="ClosedXML" version="0.86.0" targetFramework="net461" />
   <package id="DocumentFormat.OpenXml" version="2.5" targetFramework="net461" />
+  <package id="System.IO.Compression" version="4.3.0" targetFramework="net461" />
   <package id="System.IO.FileSystem" version="4.3.0" targetFramework="net461" />
   <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="net461" />
   <package id="System.Management.Automation" version="6.1.7601.17515" targetFramework="net461" />
