--- a/src/QuizH/QuizH.csproj
+++ b/src/QuizH/QuizH.csproj
@@ -10,6 +10,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="scripts\Exam - Copy.js" />
+    <None Remove="scripts\Exam - Copy.js.map" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Include="App.config" />
     <None Update="wwwroot\**\*">
       <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
