Add functioning modal to question editor

--- a/src/QuizH/scripts/tsconfig.json
+++ b/src/QuizH/scripts/tsconfig.json
@@ -3,15 +3,16 @@
         "noImplicitAny": true,
         "noEmitOnError": true,
         "sourceMap": true,
-        "target": "es5",
+        "target": "es2016",
         "module": "amd",
         "typeRoots": [ "./typings" ]
     },
-    "files": [
-      "./require-config.ts",
-      "./Exam.ts",
-      "./Question.ts"
+  "files": [
+    "./require-config.ts",
+    "./Exam.ts",
+    "./Question.ts",
+    "./ModalEditor.ts"
 
-    ],
+  ],
     "compileOnSave": true
 }
