--- a/src/QuizH/bower.json
+++ b/src/QuizH/bower.json
@@ -6,5 +6,7 @@
     "jquery": "2.2.3",
     "jquery-validation": "1.15.0",
     "jquery-validation-unobtrusive": "3.2.6",
-    "knockout": "3.4.0"}
+    "knockout": "3.4.0",
+    "tinymce": "4.5.5"
+  }
 }
