modifiche per build TS

--- a/src/QuizH/QuizH.csproj
+++ b/src/QuizH/QuizH.csproj
@@ -15,6 +15,22 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="node_modules\**" />
+    <Content Remove="node_modules\**" />
+    <EmbeddedResource Remove="node_modules\**" />
+    <None Remove="node_modules\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Include="wwwroot\Controllers\AccountController.cs" />
+    <Compile Include="wwwroot\Controllers\ExamController.cs" />
+    <Compile Include="wwwroot\Controllers\HomeController.cs" />
+    <Compile Include="wwwroot\Controllers\ManageController.cs" />
+    <Compile Include="wwwroot\Controllers\ProfessorController.cs" />
+    <Compile Include="wwwroot\Controllers\QuestionController.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Include="App.config" />
     <None Update="wwwroot\**\*">
       <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
