--- a/App.Test/App.Test.csproj
+++ b/App.Test/App.Test.csproj
@@ -31,9 +31,16 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Castle.Core, Version=4.0.0.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
+      <HintPath>..\packages\Castle.Core.4.0.0\lib\net45\Castle.Core.dll</HintPath>
+    </Reference>
     <Reference Include="DocumentFormat.OpenXml, Version=2.6.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\DocumentFormat.OpenXml.2.5\lib\DocumentFormat.OpenXml.dll</HintPath>
+    </Reference>
+    <Reference Include="MediatR, Version=2.1.0.0, Culture=neutral, PublicKeyToken=null" />
+    <Reference Include="Moq, Version=4.7.8.0, Culture=neutral, PublicKeyToken=69f491c39445e920, processorArchitecture=MSIL">
+      <HintPath>..\packages\Moq.4.7.8\lib\net45\Moq.dll</HintPath>
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
@@ -46,7 +53,8 @@
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="QuestionUpdateQueryHandlerTests - Copy.cs" />
+    <Compile Include="QuestionUpdateQueryHandlerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -56,13 +64,25 @@
     <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\src\BL.Interfaces\BL.Interfaces.csproj">
+      <Project>{0dbc5603-2625-4088-b9e4-ead51d78485c}</Project>
+      <Name>BL.Interfaces</Name>
+    </ProjectReference>
     <ProjectReference Include="..\src\BL\BL.csproj">
       <Project>{D9402D7F-7906-439D-8DBA-3E86B2F3CDAE}</Project>
       <Name>BL</Name>
     </ProjectReference>
+    <ProjectReference Include="..\src\DAL\DAL.csproj">
+      <Project>{d2dba63f-30a6-4aa1-a3f1-9d39606bfe14}</Project>
+      <Name>DAL</Name>
+    </ProjectReference>
     <ProjectReference Include="..\src\Entities\Entities.csproj">
       <Project>{695F8BF4-1F78-4948-8F3B-F53381289AA5}</Project>
       <Name>Entities</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\src\QuizH\QuizH.csproj">
+      <Project>{3e787d0e-592c-4a89-8007-e48a77bc1335}</Project>
+      <Name>QuizH</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
