--- a/App.Test/App.Test.csproj
+++ b/App.Test/App.Test.csproj
@@ -53,7 +53,7 @@
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="QuestionUpdateQueryHandlerTests - Copy.cs" />
+    <Compile Include="QuestionUpdateCommandHandlerTests.cs" />
     <Compile Include="QuestionUpdateQueryHandlerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
