Adapt entities to EF

--- a/src/QuizH/appsettings.json
+++ b/src/QuizH/appsettings.json
@@ -11,6 +11,7 @@
     }
   },
   "ConnectionStrings": {
-    "MyConnection": "Data Source=quizh.db"
+    "MyConnection": "Data Source=quizh.db",
+    "MyConnectionEntity": "Data Source=Entity.db"
   }
 }
