--- a/src/QuizH/package.json
+++ b/src/QuizH/package.json
@@ -6,7 +6,9 @@
     "requirejs": "^2.3.2"
   },
   "devDependencies": {
-    "gulp": "3.9.0",
-    "del": "2.2.0"
+    "del": "2.2.0",
+    "gulp": "^3.9.0",
+    "gulp-typescript": "^3.1.6",
+    "typescript": "^2.2.2"
   }
 }
