--- a/BL.Test/packages.config
+++ b/BL.Test/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="DocumentFormat.OpenXml" version="2.5" targetFramework="net461" />
+  <package id="HtmlAgilityPack" version="1.4.9.5" targetFramework="net461" />
   <package id="NUnit" version="3.6.1" targetFramework="net461" />
   <package id="NUnit3TestAdapter" version="3.7.0" targetFramework="net461" />
   <package id="System.IO.Compression" version="4.3.0" targetFramework="net461" />
