--- a/BL.Test/BL.Test.csproj
+++ b/BL.Test/BL.Test.csproj
@@ -49,7 +49,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DocumentGeneratorForTests.cs" />
+    <Compile Include="DocumentGeneratorTest.cs" />
     <Compile Include="AnswerExtractorTest.cs" />
     <Compile Include="HtmlParserTest.cs" />
     <Compile Include="ZipperTest.cs" />
