--- a/src/QuizH/app.config
+++ b/src/QuizH/app.config
@@ -2,5 +2,7 @@
    <runtime>
       <gcServer enabled="true"/>
    </runtime>
-
+  <appSettings>
+    <add key="FeatureToggle.HtmlToDocumentFeature" value="false"/>
+  </appSettings>
 </configuration>
